# OsprAi

./: .cproject  .gitignore  .mxproject  .project  OsprAi Debug.launch  OsprAi.ioc  README.md
.metadata/: version.ini
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
Controller/: Cargo.toml  build.rs
Controller/src/: ethernet_interface.rs  event_management.rs  frame_parser.rs  gamepad_manager.rs  logs_recorder.rs  main.rs  message_type.rs  ui.rs
Controller/src/ethernet_interface/: ethernet_interface.rs  mod.rs
Controller/src/events_management/: events_management.rs  events_observers.rs  mod.rs
Controller/ui/: osprai_window.slint
Core/Inc/: GpsManager.h  ImuManager.h  MotorsController.h  Quaternion.h  main.h  stm32l4xx_it.h  utils.cpp
Core/Inc/Network/: NetworkInterface.cpp  NetworkInterface.h  nRF24Interface.cpp
Core/Inc/Sensors/: ImuManager.cpp  SensorManager.h
Core/Src/: GpsManager.cpp  ImuManager.cpp  main.cpp  stm32l4xx_hal_msp.c  stm32l4xx_it.c
Debug/: OsprAi.map  objects.list
Drone/: OsprAi.ioc
Drone/.metadata/: .log4j2.xml
Drone/Debug/: OsprAi.elf  OsprAi.list  makefile
OsprAiCompanion/: CMakeLists.txt
OsprAiCompanion/include/: ComInterface.hpp  EthernetInterface.hpp  EventsManagement.hpp  FrameParser.hpp  UARTInterface.hpp  UDPInterface.hpp  Utils.hpp
OsprAiCompanion/src/: CustomCompanion  CustomCompanion.cpp
OsprAiDrone/: .cproject  .mxproject  .project  OsprAiDrone Debug.launch  OsprAiDrone.ioc  stm32xx_hal_msp_c.ftl
OsprAiDrone/MXTmpFiles/: gpio.tmp
(+65 files in other folders)
